# Advanced_Web_Dev

./: .gitignore  .prettierrc  README.md  docker-compose.yaml
LAB 3 - SCSS/: README.md
LAB 3 - SCSS/src/: index.html  package.json
LAB 3 - SCSS/src/css/: styles.css  styles.css.map
LAB 3 - SCSS/src/sass/: styles.scss
LAB 4 - Bootstrap/: index.html
LAB 4 - Bootstrap/css/: mdb.dark.rtl.min.css  mdb.rtl.min.css
LAB 4 - Bootstrap/src/js/: mdb.free.js
LAB 5 - Spring Boot/: .env  docker-compose.dev.yaml
LAB 5 - Spring Boot/Backend/: Dockerfile.backend  pyproject.toml
LAB 5 - Spring Boot/Backend/src/: main.py  settings.py
LAB 5 - Spring Boot/Backend/src/apps/Author/: models.py  routers.py  schemas.py
LAB 5 - Spring Boot/Backend/src/apps/BookService/: models.py  routers.py  schemas.py
LAB 5 - Spring Boot/Database/: Dockerfile.postgres
LAB 6 - Vue/: '
LAB 6 - Vue/address-book-vue-app/: package-lock.json  package.json
LAB 6 - Vue/address-book-vue-app/public/: index.html
LAB 6 - Vue/address-book-vue-app/src/: App.vue
LAB 7 - GraphQL/: package.json
LAB 7 - GraphQL/src/: App.js  schema.graphql  schema.js
LAB 8 - WebSocket/: .gitignore  package-lock.json  server.js
LAB 8 - WebSocket/public/: chat.html  index.html
LAB 8 - WebSocket/public/js/: main.js
Project/: .gitignore  README.md  docker-compose.dev.yaml  sample.env
Project/backend/: Dockerfile.backend  pyproject.toml  sample.env
Project/backend/src/: main.py  settings.py
Project/backend/src/apps/movies/: models.py  routers.py  schemas.py  utils.py
Project/backend/src/apps/rooms/: models.py  routers.py  schemas.py
Project/backend/src/apps/services/: data.schema.json  generate_pdf.py  send_email.py
Project/backend/src/apps/sessions/: models.py  routers.py  schemas.py  transactions.py
Project/backend/src/apps/user/: auth.py  models.py  utils.py
Project/backend/src/apps/utilities/: redis.py  utils.py
Project/database/: Dockerfile.postgres
Project/frontend/: Dockerfile.frontend  README.md  package-lock.json  package.json  roomSetups.json  sample.env
Project/frontend/src/: App.tsx
plugins/AdvertisementInPost/: advertisement-in-post.php
plugins/AdvertisementInPost/css/: style.css
plugins/NewlyAddedPostHighliter/: newly-added-post-highliter.php
plugins/NewlyAddedPostHighliter/css/: style.css
plugins/akismet/_inc/: akismet-frontend.js  akismet.css  akismet.js
(+95 files in other folders)
